@startuml

title __LAB11P1's Class Diagram__\n

  namespace  {
    namespace ab11p1 {
      abstract class Lab11p1.Computer {
          {abstract} + getCPU()
          {abstract} + getHDD()
          {abstract} + getRAM()
          + toString()
      }
    }
  }
  

  namespace  {
    namespace ab11p1 {
      class Lab11p1.ComputerFactory {
          {static} + getComputer()
      }
    }
  }
  

  namespace  {
    namespace ab11p1 {
      class Lab11p1.PC {
          - cpu : String
          - hdd : String
          - ram : String
          + PC()
          + getCPU()
          + getHDD()
          + getRAM()
      }
    }
  }
  

  namespace  {
    namespace ab11p1 {
      class Lab11p1.Server {
          - cpu : String
          - hdd : String
          - ram : String
          + Server()
          + getCPU()
          + getHDD()
          + getRAM()
      }
    }
  }
  

  namespace  {
    namespace ab11p1 {
      class Lab11p1.SingletonComputerFactory {
          {static} - singletonFactory : SingletonComputerFactory
          + getComputer()
          {static} + getSingletonFactory()
          - SingletonComputerFactory()
      }
    }
  }
  

  namespace  {
    namespace ab11p1 {
      class Lab11p1.TestFactory {
          {static} + main()
      }
    }
  }
  

  Lab11p1.PC -up-|> Lab11p1.Computer
  Lab11p1.Server -up-|> Lab11p1.Computer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
